This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
11/27/21: Fixed loading map from non-current open file with hole finder open
(In 3.8).

11/23/21: Changes to support frame filename changes in DE server 2.5.

11/23/21: More changes for camera timing calibration with NoShutter = 2.

11/23/21: Changed from two primary actions for saving images in Acquire at
Items to one action with a checkbox for making a map.  Also allowed this action
to be with View/Search images regardless of whether a map is being made.

11/21/21: Fixed image acquisition from Gatan camera, broken 11/8.

11/21/21: When DM dies and there is a filter, the filter update will not only
retry every 5 seconds, since the more frequent retries were hanging SerialEM
with a socket connection.

11/21/21: Added condenser stigmator script commands.

11/18/21: Fixed Falcon dose rate output being off by 4, broken 10/12.

11/18/21: Changed name of temporary file during inverting/reordering of tilt
series to not end in .mrc, to discourage automatic copying.

11/18/21: Made it possible to move a task above or below the Primary Action
with the Move Up/Down buttons in Acquire at Items.

11/18/21: Fixed loss of prediction-related parameters when reading tilt series
parameters from a Navigator file.

11/18/21: Fixed setting target defocus value into master value when postponing
tilt series dialog.

11/18/21: Made the Acquire at Items primary task selection appropriate for
tilt series or no tilt series when switching between the two parameter sets or
loading a set from file.

11/16/21: Fixed loss of autofocus beam tilt when loading tilt series
parameters back from Navigator file.

11/16/21: Added warning to log if there are unicode or other special
characters in the MrcHeaderTitle property.
