@@ -150,7 +150,10 @@
       This target applies to all autofocusing done, either with the Autofocus task in
       the task list, when running tilt series, when waiting for drift with autofocus
       runs, or when running a script.&nbsp; Hence the option is enabled in all those
-      cases.</P>
+      cases.&nbsp; Whenever the program changes the target, it will also change the 
+      defocus by the same amount.&nbsp; Thus, you can do autofocus on only a subset of 
+      items and the focus will be set correctly for the items in between the directly 
+      focused ones.</P>
     <P><strong>Adjust beam tilt &amp; astig for image shift</strong></P>
     <P>This option is enabled when you are saving images or maps, if you have calibrated the beam tilt needed for
       coma-free alignment as a function of image shift with
